= CHANGELOG

== Version YYYYMMDD

Here are the changes from version 20130715 to version YYYYMMDD.

=== Summary

* Compiler.
* Runtime.
* Language.
* Libraries.
* Tools.

=== Details

* 2018-01-24
  ** Extend `-target-*-opt` options to support `__arch__-__os__` pairs.
  ** Remove `./package/rpm/*` and corresponding targets in `./Makefile`;
  upstream MLton has not produced RPMs for years.

* 2018-01-24
  ** Slightly improve performance of `Vector.concat` and
  `String.{concat,concatWith,tokens,fields}` by avoiding `List.map`-s.

* 2018-01-23
  ** Restore, but deprecate, `-drop-pass` compile-time expert option.

* 2018-01-19
  ** Update SML/NJ libraries to SML/NJ 110.82.

* 2017-12-29
  ** Add support for `(*#showBasis "_file_"*)` directives.  This feature is
  meant to facilitate auto-completion via
  https://github.com/MatthewFluet/company-mlton[`company-mlton`] and similar
  tools.

* 2017-12-20
  ** Update performance comparison on website.  Thanks to Curtis Dunham for the
  pull request.

* 2017-12-17
  ** Updates to `-show-basis`:
    *** `-show-basis-flat`: Recursively expand structures in environments,
    displaying components with long identifiers.
    *** `-show-basis-def`: Appends `(* @ _region_ *)` annotations to items shown
    in environment.
    *** `-show-basis-compact`: Tries to optimize vertical space (at the expense
    of long lines).

* 2017-12-11
  ** Drop `_BSD_SOURCE` and `_POSIX_C_SOURCE` feature macros in
  `./runtime/cenv.h`.

* 2017-12-10
  ** Add a `Dockerfile` to build/test MLton.  Thanks to Richard Laughlin for the
  pull request.

* 2017-12-06
  ** Remove `$PREFIX` and `$prefix` from top-level `Makefile.in`; use
  `./configure --prefix _path_`.  Thanks to Richard Laughlin for the pull
  request.

* 2017-12-03
  ** Fix heap invariant predicates.

* 2017-11-15
  ** Eliminate the use of (some) global mutable state for signal handling.

* 2017-11-14
  ** Store forwarding pointer for an object in the object header (rather than in